lots and tons of changes

--- a/views/center/apa/apaForm.ejs
+++ b/views/center/apa/apaForm.ejs
@@ -72,6 +72,7 @@
                                                 <option value="">একক বাছুন</option>
                                             </select>
                                         </div>
+                                     
                                         <div class="col">
                                             <label for="shuchokMaan" class="col control-label">কর্মসম্পাদন সূচক এর মান</label>
 <!--                                            <input type="text" class="form-control" name="shuchokMaan" placeholder="কর্মসম্পাদন সূচক এর মান বাছুনঃ">-->
@@ -80,7 +81,14 @@
                                             </select>
                                         </div>
                                     </div>
-
+                                    <div class="col">
+                                            <label for="gonona" class="col control-label">গণনা পদ্ধতি</label>
+                                        <select id="gonona" name="gonona">
+                                            <option value="গড়">গড়</option>
+                                            <option value="সমষ্টি">সমষ্টি</option>
+                                            <option value="বছর">বছর</option>
+                                        </select>
+                                        </div>
                                     <div class="form-group">
                                         <label for="best" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অসাধারণ ১০০%)</label>
                                         <div class="col-md-9">
