--- a/views/center/apa/apaTable.ejs
+++ b/views/center/apa/apaTable.ejs
@@ -7,6 +7,7 @@
         <th>কার্যক্রম</th>
         <th>কর্মসম্পাদন সূচক</th>
         <th>একক</th>
+        <th>গণনা পদ্ধতি</th>
         <th>কর্মসম্পাদন সূচক এর মান</th>
         <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
         <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
@@ -30,6 +31,7 @@
                 <td><%= row.work %></td>
                 <td><%= row.shuchok %></td>
                 <td><%= row.ekok %></td>
+                <td><%= row.gonona %></td>
                 <td><%= row.shuchokMaan %></td>
                 <td><%= new Number(row.best).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(row.otiUttam).toLocaleString("bn-BD") %></td>
@@ -56,6 +58,7 @@
         <th>কার্যক্রম</th>
         <th>কর্মসম্পাদন সূচক</th>
         <th>একক</th>
+        <th>গণনা পদ্ধতি</th>
         <th>কর্মসম্পাদন সূচক এর মান</th>
         <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
         <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
