--- a/views/center/employee/chak2/employeeChak2Form.ejs
+++ b/views/center/employee/chak2/employeeChak2Form.ejs
@@ -54,14 +54,14 @@
                                     <div class="form-group">
                                         <label for="pod" class="col-md-3 control-label">মঞ্জুরীকৃত পদ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="pod" placeholder="মঞ্জুরীকৃত পদ">
+                                            <input type="number" class="form-control" name="pod" placeholder="মঞ্জুরীকৃত পদ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="working" class="col-md-3 control-label">কর্মরত</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="working" placeholder="কর্মরত">
+                                        <input type="number" class="form-control" name="working" placeholder="কর্মরত">
                                         </div>
                                     </div>
                                     
