--- a/views/pd/apa/apaCategoryTable.ejs
+++ b/views/pd/apa/apaCategoryTable.ejs
@@ -170,12 +170,12 @@
                                         </select>
                                     </div>
                                     <div class="col">
-                                        <label for="">কর্মসম্পাদন</label>
+                                        <label for="">কর্মসম্পাদন সূচক</label>
                                         <input type="text"  id="suchok" name="suchok" class="form-control">
                                     </div>
                                     <div class="col">
                                         <label for=""></label>
-                                        <input type="submit" value="কার্যক্রম যোগ করুন" class="btn btn-primary">
+                                        <input type="submit" value="কর্মসম্পাদন সূচক যোগ করুন" class="btn btn-primary">
                                     </div>
                                     <div class="col">
                                         <% apaCodes.forEach((row) => {
@@ -219,7 +219,7 @@
                                     </div>
                                     <div class="col">
                                         <label for=""></label>
-                                        <input type="submit" value="কার্যক্রম যোগ করুন" class="btn btn-primary">
+                                        <input type="submit" value="একক যোগ করুন" class="btn btn-primary">
                                     </div>
                                     <div class="col">
                                         <% apaCodes.forEach((row) => {
@@ -237,6 +237,8 @@
                             </form>
                         </div>
                     </div>
+
+                   
 
                     <!--  কর্মসম্পাদন সূচক এর মান-->
                     <div class="card">
