--- a/views/pd/employee/chak1/employeeChak1.ejs
+++ b/views/pd/employee/chak1/employeeChak1.ejs
@@ -16,6 +16,7 @@
                                 <div class="row clearfix">
                                     <div class="col-md-3">
                                         <select id="center" class="form-control" name="center" required>
+                                            <option value="">সেন্টার বাছুন</option>
                                             <option value="all">সকল সেন্টারের তথ্য</option>
                                             <% if (centers.length >0){ %>
                                                 <% centers.forEach(function (center) { %>
