--- a/views/pd/apa/pdf.ejs
+++ b/views/pd/apa/pdf.ejs
@@ -41,6 +41,8 @@
                 <th>কার্যক্রম</th>
                 <th>কর্মসম্পাদন সূচক</th>
                 <th>একক</th>
+                <th>গণনা পদ্ধতি</th>
+
                 <th>কর্মসম্পাদন সূচক এর মান</th>
                 <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
                 <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
@@ -64,6 +66,7 @@
                         <td><%= row.work %></td>
                         <td><%= row.shuchok %></td>
                         <td><%= row.ekok %></td>
+                        <td><%= row.gonona %></td>
                         <td><%= row.shuchokMaan %></td>
                         <td><%= new Number(row.best).toLocaleString("bn-BD") %></td>
                         <td><%= new Number(row.otiUttam).toLocaleString("bn-BD") %></td>
@@ -90,6 +93,8 @@
                 <th>কার্যক্রম</th>
                 <th>কর্মসম্পাদন সূচক</th>
                 <th>একক</th>
+                <th>গণনা পদ্ধতি</th>
+
                 <th>কর্মসম্পাদন সূচক এর মান</th>
                 <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
                 <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
