--- a/views/pd/employee/chak1/pdfAll.ejs
+++ b/views/pd/employee/chak1/pdfAll.ejs
@@ -32,10 +32,21 @@
     <div>
         <h1>ক্যাডার/নন ক্যাডার কর্মকতা/কর্মচারীদের নাম ও পদবী সহ শূন্য পদের তথ্য</h1>
         <p><b>সেন্টার :</b>সকল সেন্টারের তথ্য</p>
-        <%if (records.length >0){ %>
-            <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+        <%if (centers.length >0){ %>
+            <style>
+                table, th, td {
+                  border: 1px solid black;
+                  border-collapse: collapse;
+                }
+                th, td {
+                  padding: 5px;
+                  text-align: left;    
+                }
+                </style>
+            <table class="table table-bordered table-striped" >
             <thead>
             <tr>
+                <th>ক্রমিক নং</th>
                 <th>হর্টিকালচার সেন্টারের নাম</th>
                 <th>পরিচিতি নং</th>
                 <th>কর্মকর্তার নাম ও মোবাইল নং</th>
@@ -49,24 +60,54 @@
             </tr>
             </thead>
             <tbody>
-                <% records.forEach(function(row){ %>
-                    <tr>
-                        <td><%= row.center %></td>
-                        <td><%= row.porichito %></td>
-                        <td><%= row.kormokorta %></td>
-                        <td><%= row.nijDistrict %></td>
-                        <td><%= row.podobi %></td>
-                        <td><%= row.birthDate %></td>
-                        <td><%= row.firstdate %></td>
-                        <td><%= row.presentDate %></td>
-                        <td><%= row.pastWorkstation %></td>
-                        <td><%= row.comment %></td>
-                    </tr>
+                <% centers.forEach(function(center,index){ %>
+                    <% var indexes=0%>
+                    <% var centerIndex=0;%>
+                    <% chak1s.forEach(function(row){ %>
+                        <% if (center.id === row.center_id){%>
+                            <%  centerIndex +=1;%>
+                        <%}}) %>  
+                        <% chak1s.forEach(function(row){ %>
+                            <% if (center.id === row.center_id){%>
+                                <% if (indexes === 0){%>
+                                <tr>
+                                    <td rowspan="<%=centerIndex%>"><%=index+1%></td>
+                                    <td rowspan="<%=centerIndex%>"><%=center.center %></td>
+                                    <td><%= row.porichito %></td>
+                                    <td><%= row.kormokorta %></td>
+                                    <td><%= row.nijDistrict %></td>
+                                    <td><%= row.podobi %></td>
+                                    <td><%= row.birthDate %></td>
+                                    <td><%= row.firstdate %></td>
+                                    <td><%= row.presentDate %></td>
+                                    <td><%= row.pastWorkstation %></td>
+                                    <td><%= row.comment %></td>
+                                  
+                                </td>
+                            </tr>  
+                            <% indexes+=1%>
+        
+                                <%}else{%>
+                                    <tr>
+                                        <td><%= row.porichito %></td>
+                                        <td><%= row.kormokorta %></td>
+                                        <td><%= row.nijDistrict %></td>
+                                        <td><%= row.podobi %></td>
+                                        <td><%= row.birthDate %></td>
+                                        <td><%= row.firstdate %></td>
+                                        <td><%= row.presentDate %></td>
+                                        <td><%= row.pastWorkstation %></td>
+                                        <td><%= row.comment %></td>
+                                      
+                                </tr>  
+                                <%} %>
+                            <%}}) %>
+                        
                 <% }) %>
             </tbody>
         </table>
         <% }else{ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+            <table class="table table-bordered table-striped" >
                 <thead>
                 <tr>
                     <th>হর্টিকালচার সেন্টারের নাম</th>
