--- a/views/pd/rajossho/rajossho.ejs
+++ b/views/pd/rajossho/rajossho.ejs
@@ -15,6 +15,7 @@
                                         <div class="col-md-4">
                                             <select id="center" name="center" required>
                                                 <option value="">সেন্টার বাছুনঃ</option>
+                                                <option value="all">সকল সেন্টারের তথ্য</option>
                                                 <% if (centers.length >0){ %>
                                                     <% centers.forEach(function (center) { %>
                                                         <option value="<%= center.id %>"><%= center.center %></option>
