--- a/views/pd/rajossho/rajosshoTableAll.ejs
+++ b/views/pd/rajossho/rajosshoTableAll.ejs
@@ -56,14 +56,14 @@
                             <%  august1+=parseInt(row.august1) %>
                             <%  sept1+=parseInt(row.sept1) %>
                             <%  oct1+=parseInt(row.oct1) %>
-                            <%  nov1+=parseInt(row.nov1) %> %>
+                            <%  nov1+=parseInt(row.nov1)  %>
                             <%  dec1+=parseInt(row.dec1) %>
                             <%  jan2+=parseInt(row.jan2) %>
-                            <%  feb2+=parseInt(row.feb2) %> %>
+                            <%  feb2+=parseInt(row.feb2)  %>
                             <%  march2+=parseInt(row.march2) %>
                             <%  apr2+=parseInt(row.apr2) %>
                             <%  may2+=parseInt(row.may2) %>
-                            <%  june2+=parseInt(row.june2) %> %>
+                            <%  june2+=parseInt(row.june2)  %>
                             <%  total+=parseInt(row.total) %>
 
                     <%}}) %>
