refactor: added date and center name in monthly progress

--- a/views/center/revolvingFund/revolvingFundForm.ejs
+++ b/views/center/revolvingFund/revolvingFundForm.ejs
@@ -95,30 +95,30 @@
                                     </div>
                                    
                                     <div class="form-group">
-                                        <label for="productionTarget" class="col-md-3 control-label">চারা/কলম উতপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)</label>
+                                        <label for="productionTarget" class="col-md-3 control-label">চারা/কলম উৎপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="productionTarget" placeholder="চারা/কলম উতপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)">
+                                            <input type="text" class="form-control" name="productionTarget" placeholder="চারা/কলম উৎপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="productionPast" class="col-md-3 control-label">চারা/কলম উতপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)</label>
+                                        <label for="productionPast" class="col-md-3 control-label">চারা/কলম উৎপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="productionPast" placeholder="চারা/কলম উতপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)">
+                                            <input type="text" class="form-control" name="productionPast" placeholder="চারা/কলম উৎপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="productionPresent" class="col-md-3 control-label">চারা/কলম উতপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)</label>
+                                        <label for="productionPresent" class="col-md-3 control-label">চারা/কলম উৎপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="productionPresent" placeholder="চারা/কলম উতপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)">
+                                            <input type="text" class="form-control" name="productionPresent" placeholder="চারা/কলম উৎপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="productionTotal" class="col-md-3 control-label">চারা/কলম উতপাদন(সংখ্যায়) (মোট উৎপাদন)</label>
+                                        <label for="productionTotal" class="col-md-3 control-label">চারা/কলম উৎপাদন(সংখ্যায়) (মোট উৎপাদন)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="productionTotal" placeholder="চারা/কলম উতপাদন(সংখ্যায়) (মোট উৎপাদন)">
+                                        <input type="text" class="form-control" name="productionTotal" placeholder="চারা/কলম উৎপাদন(সংখ্যায়) (মোট উৎপাদন)">
                                         </div>
                                     </div>
 
