--- a/views/center/revolvingFund/revolvingFundTable.ejs
+++ b/views/center/revolvingFund/revolvingFundTable.ejs
@@ -11,10 +11,10 @@
         <th>বিক্রিত অর্থ জমা (বর্তমান মাসে জমা)</th>
         <th>বিক্রিত অর্থ জমা (মোট জমা)</th>
         <th>চারা/কলমের নাম</th>
-        <th>চারা/কলম উতপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)</th>
-        <th>চারা/কলম উতপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)</th>
-        <th>চারা/কলম উতপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)</th>
-        <th>চারা/কলম উতপাদন(সংখ্যায়) (মোট উৎপাদন)</th>
+        <th>চারা/কলম উৎপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)</th>
+        <th>চারা/কলম উৎপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)</th>
+        <th>চারা/কলম উৎপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)</th>
+        <th>চারা/কলম উৎপাদন(সংখ্যায়) (মোট উৎপাদন)</th>
         <th>চারা/কলম বিতরণ(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত বিতরণ)</th>
         <th>চারা/কলম বিতরণ(সংখ্যায়) (বর্তমান মাসে বিতরণ)</th>
         <th>চারা/কলম বিতরণ(সংখ্যায়) (মৃত/অবিক্রয়যোগ্য সংখ্যা(মোট))</th>
@@ -62,10 +62,10 @@
             <th>বিক্রিত অর্থ জমা (বর্তমান মাসে জমা)</th>
             <th>বিক্রিত অর্থ জমা (মোট জমা)</th>
             <th>চারা/কলমের নাম</th>
-            <th>চারা/কলম উতপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)</th>
-            <th>চারা/কলম উতপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)</th>
-            <th>চারা/কলম উতপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)</th>
-            <th>চারা/কলম উতপাদন(সংখ্যায়) (মোট উৎপাদন)</th>
+            <th>চারা/কলম উৎপাদন(সংখ্যায়) (লক্ষ্যমাত্রা)</th>
+            <th>চারা/কলম উৎপাদন(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত উৎপাদন)</th>
+            <th>চারা/কলম উৎপাদন(সংখ্যায়) (বর্তমান মাসে উৎপাদন)</th>
+            <th>চারা/কলম উৎপাদন(সংখ্যায়) (মোট উৎপাদন)</th>
             <th>চারা/কলম বিতরণ(সংখ্যায়) (পূর্ববর্তী মাস পর্যন্ত বিতরণ)</th>
             <th>চারা/কলম বিতরণ(সংখ্যায়) (বর্তমান মাসে বিতরণ)</th>
             <th>চারা/কলম বিতরণ(সংখ্যায়) (মৃত/অবিক্রয়যোগ্য সংখ্যা(মোট))</th>
