--- a/views/center/topSheet/topSheetForm.ejs
+++ b/views/center/topSheet/topSheetForm.ejs
@@ -46,9 +46,9 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="cproduction" class="col-md-3 control-label">চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</label>
+                                        <label for="cproduction" class="col-md-3 control-label">চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="cproduction" placeholder="চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)">
+                                        <input type="text" class="form-control" name="cproduction" placeholder="চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)">
                                         </div>
                                     </div>
 
