--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,7 +203,9 @@
         </div>
         <div class="row">
             <div class="text-center">
-                <button class="btn btn-success" id="search">Search</button>
+<!--                <button class="btn btn-success" id="search">Search</button>-->
+                <a href="#output" id="search" class="btn btn-success">Search</a>
+
             </div>
         </div>
 
