--- a/views/pd/topSheet/topSheetTable.ejs
+++ b/views/pd/topSheet/topSheetTable.ejs
@@ -5,7 +5,7 @@
             <th>আইটেমের নাম</th>
             <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
             <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-            <th>চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</th>
+            <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
             <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
         </tr>
         </thead>
@@ -77,7 +77,7 @@
             <th>আইটেমের নাম</th>
             <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
             <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-            <th>চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</th>
+            <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
             <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
             <th>পরিবর্তন/মুছুন</th>
         </tr>
