--- a/views/pd/topSheet/bitoron/pdf.ejs
+++ b/views/pd/topSheet/bitoron/pdf.ejs
@@ -31,13 +31,14 @@
 <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
         <h1>মাসিক টপশীট (বিতরণ)</h1>
+        <div><p><b>প্রতিবেদনের তারিখ : </b><%= moment(selectedDate).locale("bn").format("MM/YYYY") %></p></div>
         <%if (records.length >0){ %>
             <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
                 <thead>
                 <tr>
                     <th>আইটেমের নাম</th>
                     <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-                    <th>চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</th>
+                    <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
                     <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
                 </tr>
                 </thead>
@@ -107,7 +108,7 @@
                 <tr>
                     <th> আইটেমের নাম </th>
                     <th> গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-                    <th>চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</th>
+                    <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
                     <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
                     <th>পরিবর্তন/মুছুন</th>
                 </tr>
