--- a/views/pd/topSheet/pdf.ejs
+++ b/views/pd/topSheet/pdf.ejs
@@ -31,6 +31,7 @@
 <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
         <h1>মাসিক টপশীট (উৎপাদন)</h1>
+        <div><p><b>প্রতিবেদনের তারিখ : </b><%= moment(selectedDate).locale("bn").format("MM/YYYY") %></p></div>
         <%if (records.length >0){ %>
             <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
                 <thead>
@@ -38,7 +39,7 @@
                     <th>আইটেমের নাম</th>
                     <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
                     <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-                    <th>চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</th>
+                    <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
                     <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
                 </tr>
                 </thead>
@@ -110,7 +111,7 @@
                     <th>আইটেমের নাম</th>
                     <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
                     <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-                    <th>চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</th>
+                    <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
                     <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
                     <th>পরিবর্তন/মুছুন</th>
                 </tr>
