--- a/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -235,8 +235,8 @@
                 <td><%= new Number(currentBitoronSum + previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number((currentProductionSum + previousMonthProduction)-(currentBitoronSum + previousMonthBitoronSum)).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentBitoronSum + previousMonthBitoronSum + currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer)-(currentBitoronSum + previousMonthBitoronSum + currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td>
             </tr>
 
         <% }) %>
