--- a/views/pd/monthlyProgress/pdfForAllCenter.ejs
+++ b/views/pd/monthlyProgress/pdfForAllCenter.ejs
@@ -46,7 +46,7 @@
     <div>
         <div class="row">
             <div class="box">
-                <img src="https://picsum.photos/200/300" alt="">
+                <img src="/public/landingPage/images/daelogo.png" alt="DAE" width="80px">
             </div>
             <div class="box">
                 <h4>Horticulture Wing Center Dhaka</h4>
