--- a/views/pd/centerInfo/center.ejs
+++ b/views/pd/centerInfo/center.ejs
@@ -74,7 +74,12 @@
 
 
                    <div id="output"></div>
-                 
+                   <button onclick="exportToPdf()" class="btn btn-success">
+                    Download PDF
+                </button>
+                <button onclick="exportToExcel('tblexportData', 'সেন্টারসমূহের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
+
+
                 </div>
             </div>
         </div>
@@ -82,4 +87,48 @@
 
     <%- include('../../includes/footer')-%>
 
- 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+        async function exportToPdf() {
+            const { data } = await axios.post(`/pd/generatePdfcenter`);
+            var mywindow = window.open("", "PRINT", "height=400,width=600");
+            mywindow.document.write(data.html);
+            mywindow.document.close(); // necessary for IE >= 10
+            mywindow.focus(); // necessary for IE >= 10*/
+            mywindow.print();
+            return true;
+        }
+    </script>
+    <script type="text/javascript">
+        function exportToExcel(tableID, filename = ''){
+            var downloadurl;
+            var dataFileType = 'application/vnd.ms-excel';
+            var tableSelect = document.getElementById(tableID);
+            var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
+            
+            // Specify file name
+            filename = filename?filename+'.xls':'export_excel_data.xls';
+            
+            // Create download link element
+            downloadurl = document.createElement("a");
+            
+            document.body.appendChild(downloadurl);
+            
+            if(navigator.msSaveOrOpenBlob){
+                var blob = new Blob(['\ufeff', tableHTMLData], {
+                    type: dataFileType
+                });
+                navigator.msSaveOrOpenBlob( blob, filename);
+            }else{
+                // Create a link to the file
+                downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+            
+                // Setting the file name
+                downloadurl.download = filename;
+                
+                //triggering the function
+                downloadurl.click();
+            }
+        }
+         
+        </script>
