--- a/views/pd/worker/workerInfo/pdf.ejs
+++ b/views/pd/worker/workerInfo/pdf.ejs
@@ -1,95 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>শ্রমিকের তথ্য</title>
 
     <style>
-        .flex-container {
-            display: flex;
+      .flex-container {
+        display: flex;
 
-            justify-content: center
-        }
-        .table, td, th {
-            border: 1px solid black;
-        }
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .center {
-            text-align: center;
-        }
-        .inline-block-child {
-            display: inline-block;
-        }
+        justify-content: center;
+      }
+      .table,
+      td,
+      th {
+        border: 1px solid black;
+      }
+      .table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      .center {
+        text-align: center;
+      }
+      .inline-block-child {
+        display: inline-block;
+      }
     </style>
-</head>
-<body>
-
-<div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
-    <div>
-        <h1>শ্রমিকের তথ্য</h1>
+  </head>
+  <body>
+    <div
+      style="
+        margin-top: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        background-color: #ffffffa6;
+      "
+      class="center"
+    >
+      <div>
+        <div
+          style="
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+          "
+        >
+          <img src="/landingPage/images/daelogo.png" alt="DAE" width="80px" />
+          <div>
+            <h1>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h1>
+            <h2>কৃষি সম্প্রসারণ অধিদপ্তর</h2>
+            <h3>উপপরিচালকের কার্যালয়</h3>
+            <h2>শ্রমিকের তথ্য</h2>
+          </div>
+          <img
+            src="/landingPage/images/bdlogo.png"
+            alt="Homepage"
+            width="80px"
+          />
+        </div>
         <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
+        <div
+          style="
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+          "
+        >
+          <p>স্মারক নংঃ</p>
+          <p>তারিখঃ <%= new Date().toLocaleDateString();%></p>
+        </div>
         <%if (records.length >0){ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-            <thead>
+        <table
+          class="table table-bordered table-striped"
+          id="tblCustomers"
+          cellspacing="0"
+          cellpadding="0"
+        >
+          <thead>
             <tr>
-                <th>ক্রমিক নং</th>
-                <th>পদবী</th>
-                <th>নাম</th>
-                <th>পিতার নাম</th>
-                <th>ঠিকানা</th>
-                <th>মোবাইল নং</th>
-                <th>যোগদানের তারিখ</th>
-                <th>এনআইডি নং</th>
-                <th>ব্যাংক একাউন্ট নং</th>
+              <th>ক্রমিক নং</th>
+              <th>পদবী</th>
+              <th>নাম</th>
+              <th>পিতার নাম</th>
+              <th>ঠিকানা</th>
+              <th>মোবাইল নং</th>
+              <th>যোগদানের তারিখ</th>
+              <th>এনআইডি নং</th>
+              <th>ব্যাংক একাউন্ট নং</th>
             </tr>
-            </thead>
-            <tbody>
-                <% records.forEach(function(row,index){ %>
-                    <tr>
-                        <td><%= index+1 %></td>
-                        <td><%= row.podobi %></td>
-                        <td><%= row.name %></td>
-                        <td><%= row.fname %></td>
-                        <td><%= row.address %></td>
-                        <td><%= row.mobile %></td>
-                        <td><%= row.date %></td>
-                        <td><%= row.nid %></td>
-                        <td><%= row.bank %></td>
-                        
-                    </tr>
-                <% }) %>
-            </tbody>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row,index){ %>
+            <tr>
+              <td><%= index+1 %></td>
+              <td><%= row.podobi %></td>
+              <td><%= row.name %></td>
+              <td><%= row.fname %></td>
+              <td><%= row.address %></td>
+              <td><%= row.mobile %></td>
+              <td><%= row.date %></td>
+              <td><%= row.nid %></td>
+              <td><%= row.bank %></td>
+            </tr>
+            <% }) %>
+          </tbody>
         </table>
         <% }else{ %>
-            <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
-                <thead>
-                <tr>
-                    <th>ক্রমিক নং</th>
-                <th>পদবী</th>
-                <th>নাম</th>
-                <th>পিতার নাম</th>
-                <th>ঠিকানা</th>
-                <th>মোবাইল নং</th>
-                <th>যোগদানের তারিখ</th>
-                <th>এনআইডি নং</th>
-                <th>ব্যাংক একাউন্ট নং</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% records.forEach(function(row){ %>
-                    <tr>
-                        <td colspan="10">No data Found</td>
-                    </tr>
-                <% }) %>
-                </tbody>
-            </table>
+        <table
+          class="table table-bordered table-striped"
+          id="tblexportData"
+          cellspacing="0"
+          cellpadding="0"
+        >
+          <thead>
+            <tr>
+              <th>ক্রমিক নং</th>
+              <th>পদবী</th>
+              <th>নাম</th>
+              <th>পিতার নাম</th>
+              <th>ঠিকানা</th>
+              <th>মোবাইল নং</th>
+              <th>যোগদানের তারিখ</th>
+              <th>এনআইডি নং</th>
+              <th>ব্যাংক একাউন্ট নং</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row){ %>
+            <tr>
+              <td colspan="10">No data Found</td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
         <% } %>
+      </div>
     </div>
-</div>
-
-</body>
+  </body>
 </html>
